# CS224G

./: .gitignore  README.md  SPRINT_ONE.md  basic_prompts.py  package-lock.json  pyproject.toml  requirements.txt  run.py
backend/: accounts.py  api.py  app.py  basic_prompts.py  diagnosis_matching.py  diagnosis_prompts.py  image_generation.py  prompts.py  requirements.txt  run.py  voice_generation.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js  supabase.js
frontend/src/UserAuthentication/: Auth.css  Auth.js
frontend/src/components/: ProtectedRoute.js
frontend/src/components/Authentication/: AuthContext.js  AuthenticationForm.css  AuthenticationForm.js
frontend/src/components/Authentication/components/: FormField.js  SignupSuccess.js
frontend/src/components/Authentication/hooks/: useAuthForm.js
frontend/src/components/Authentication/utils/: schema.js
frontend/src/components/Chatbot/: ChatInterface.css  ChatInterface.js
frontend/src/components/SessionHistory/: SessionHistory.js
progress/: SPRINT_ONE.md  SPRINT_TWO.md
prototype/: prompts.py  run.py
