[project]
name = "cs224g"
version = "0.1.0"
description = ""
authors = [
    {name = "winsonc7",email = "winsonc@stanford.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai (>=1.61.1,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
